# t-tool

./: .gitignore  AGENTS.md  README.md  prompts.md  prompts.txt  pyproject.toml
projects/dbeaver-demo/: README.txt
tests/: test_create_project.py  test_import_service_creates_asset_and_segments.py  test_ticket10_change_variant_a.py  test_ticket3_job_review_export.py  test_ticket3b_lp_copy_export.py  test_ticket4_placeholder_firewall.py  test_ticket5_glossary_engine.py  test_ticket6_tm_store_search.py  test_ticket7_llm_provider_layer.py  test_ticket8_import_v2.py  test_ticket9_change_variant_b.py
tt_app/: app.py
tt_app/pages/: 0_Create_Project.py  1_Select_Project.py  2_Import_File.py  3_Run_Job.py  4_Review_Approve.py  5_Export.py  6_Settings_Providers.py
tt_cli/: __init__.py  main.py
tt_core/: __init__.py  constants.py
tt_core/db/: __init__.py  engine.py  migrations.py  models.py  schema.py  session.py
tt_core/export/: __init__.py  export_lp_copy.py  export_patch.py
tt_core/glossary/: __init__.py  enforcer.py  glossary_store.py  matcher.py
tt_core/importers/: __init__.py  import_service.py  signature.py  xlsx_reader.py
tt_core/jobs/: __init__.py  job_service.py  mock_translator.py
tt_core/llm/: __init__.py  policy.py  prompts.py  provider_base.py  provider_local_stub.py  provider_mock.py  provider_openai.py
tt_core/project/: __init__.py  config.py  create_project.py  paths.py
tt_core/qa/: __init__.py  checks.py  placeholder_firewall.py
tt_core/review/: __init__.py  review_service.py
tt_core/tm/: __init__.py  normalize.py  tm_search.py  (+1 more)
